@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.504 2006/01/13 14:54:15 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.505 2006/01/13 15:00:04 rocket Exp $
+
+  13 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/generic_stage_target.py,
+  targets/support/kmerge.sh:
+  Fix for ccache (null)/.ccache bug
 
   13 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
   This is 2.0_rc14.
